<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gm-driver-integration</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stop_key">Chave da Parada:</string>
    <string name="start_route">Iniciar Rota</string>
    <string name="open_map">Abrir Mapa</string>
    <string name="arrive_stop">Chegar na parada</string>
    <string name="depart_stop">Sair da Parada</string>
    <string name="stop_key_hint">Chave da parada</string>
    <string name="register_gm_integration">Registrar integração com GM Driver</string>
    <string name="unregister_gm_integration">Desregistrar integração com GM Driver</string>
    <string name="complete_route">Completar rota</string>
    <string name="load_route">Baixar Rota</string>
    <string name="password">Senha</string>
    <string name="login">Usuário</string>
    <string name="button_login">Logar</string>
    <string name="equipment_key">Chave do equipamento</string>
    <string name="get_loaded_route">Pegar rota carregada</string>
    <string name="route_id">Id da rota</string>

</resources>
